kubernetes/apps/default/vikunja/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: default
  labels:
    app: vikunja
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: vikunja
          image: vikunja/vikunja:2.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3456
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/info
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/info
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: vikunja-data
              mountPath: /db
              subPath: db
            - name: vikunja-data
              mountPath: /app/vikunja/files
              subPath: files
      volumes:
        - name: vikunja-data
          persistentVolumeClaim:
            claimName: vikunja-data-pvc-lh
