kubernetes/apps/default/vikunja/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: default
  labels:
    app: vikunja
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.235  # Reserve a free MetalLB address
  selector:
    app: vikunja
  ports:
    - name: http
      port: 3456
      targetPort: http
      protocol: TCP
